--- a/Amorem Artis/Amorem Artis/MainWindow.xaml
+++ b/Amorem Artis/Amorem Artis/MainWindow.xaml
@@ -7,10 +7,10 @@
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="Menu" Height="620" Width="1080" WindowStartupLocation="CenterScreen"  ResizeMode="NoResize" WindowStyle="None" >
-    <Grid Background="#EFE2BA">
+    <Grid Background="#e8eaf6">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto" MinHeight="64"/>
+            <RowDefinition/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -18,9 +18,9 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <materialDesign:ColorZone Mode="PrimaryMid" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
+        <materialDesign:ColorZone Mode="PrimaryMid" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" Height="65">
             <Grid>
-                <TextBlock Text="MENU" FontSize="30"  VerticalAlignment="Center" HorizontalAlignment="Center" LineHeight="1" TextDecorations="{x:Null}"/>
+                <TextBlock Text="M E N U" FontSize="40"  VerticalAlignment="Center" HorizontalAlignment="Center"  FontFamily="Candara Light"/>
                 <materialDesign:PopupBox PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Margin="10" HorizontalAlignment="Right">
                     <StackPanel Width="150">
                         <Button x:Name="BtnCerrarSesion" Content="Cerrar Sesion" Click="BtnCerrarSesion_Click"/>
@@ -34,26 +34,26 @@
                 <RowDefinition Height="70"/>
                 <RowDefinition Height="326*"/>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="0" Background="#FFD89617" Height="70" Margin="10,0,10,0" >
+            <Grid Grid.Row="0" Background="#1A237E" Height="60" Margin="10,0,10,0" >
                 <StackPanel VerticalAlignment="Center" Margin="30,0,0,0" Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="User" Foreground="White" Width="30" Height="30"/>
-                    <TextBlock Text="Usuario" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="20" Margin="10,0,0,0" Foreground="White"/>
+                    <materialDesign:PackIcon Kind="User"  Width="40" Height="40" Foreground="White" />
+                    <TextBlock Text="Usuario" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="20" Margin="10,0,0,0" Foreground="White"  FontFamily="Candara Light"/>
                 </StackPanel>
             </Grid>
 
-           
+
             <ScrollViewer HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" Grid.Row="1">
                 <StackPanel x:Name="Menu" Margin="10"/>
             </ScrollViewer>
         </Grid>
-        <Image Source="Recursos/Logo.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="400" Grid.Row="1" Grid.Column="1"/>
-        
-        
+        <Image Source="Recursos/Logo.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="400" Grid.Row="1" Grid.Column="1" Height="390" Margin="215,68"/>
+
+
         <Grid x:Name="GridPrincipal" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" >
         </Grid>
-        
-        
-        <Grid Grid.Column="2" Grid.Row="2" Background="#1A237E">
+
+
+        <Grid Grid.Column="1" Grid.Row="2" Background="#1A237E">
             <TextBlock Name="dateText" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="20" Foreground="White" FontStyle="Italic" Margin="0,0,20,0"/>
 
         </Grid>
