--- a/Amorem Artis/Amorem Artis/UserControlUsuarios.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlUsuarios.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Amorem_Artis"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid VerticalAlignment="Stretch"  Background="#EFE2BA">
+    <Grid VerticalAlignment="Stretch"  Background="#e8eaf6">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
@@ -15,18 +15,22 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Grid Background="#9b0000" Grid.Row="0">
+        <Grid Background="#1a237e" Grid.Row="0">
             <TextBlock Text="Usuarios" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
-            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#9b0000" BorderBrush="#9b0000" Margin="0,0,10,0" Click="Salir_Click" />
+            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#1a237e" BorderBrush="#1a237e" Margin="0,0,10,0" Click="Salir_Click" />
         </Grid>
         
-            <StackPanel Orientation="Vertical" Grid.Row="2">
+            <StackPanel Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Center">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <Button x:Name="btnNuevoUsuario" Content="Nuevo Usuario"  Visibility="Visible" Click="BtnNuevoUsuario_Click" />
                     <Button x:Name="btnModificarUsuario" Content="Modificar Usuario"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnModificarUsuario_Click" />
                     <Button x:Name="btnElimarUsuario" Content="Eliminar Usuario"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnElimarUsuario_Click" />
                 </StackPanel>
+            <StackPanel x:Name="stkusuario" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed">
+                <TextBlock Text="Usuario" FontSize="20"/>
+                <ComboBox x:Name="cmboUsuario" Width="150"/>
             </StackPanel>
+        </StackPanel>
         <Grid x:Name="GridDetalle" Grid.Row="3" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
